# qorzen

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  DEVELOPERS_GUIDE.md  Dockerfile  LICENSE  PLUGIN_DEVELOPMENT.md  PLUGIN_GUIDE.md  Project Structure.md  README.md  Usage Guide.md  __main__.py  backend-stripper.py  code-stripper.py  code-structure-mapper.py  code-structure-mapper2.py  config.yaml.example  docker-compose.txt  frontend-stripper.py  frontend-structure-mapper.py  generate_processed_project.py  prepare-script.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  uml-generator.py
.devcontainer/: devcontainer.json
.github/: SECURITY.md  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql-analysis.yml  process_structure.yml
docs/source/: conf.py  index.rst  installation.rst
migrations/: env.py
migrations/versions/: 001_initial.py
processed_project/: qorzen_structure.md
processed_project/qorzen_stripped/: __init__.py  __main__.py  main.py  plugin_debug.py  resources_rc.py
processed_project/qorzen_structure/: index.md  metadata.md  tree_view.md
qorzen/: __init__.py  __main__.py  main.py  plugin_debug.py  resources_rc.py
qorzen/core/: __init__.py  api_manager.py  app.py  base.py  cloud_manager.py  concurrency_manager.py  config_manager.py  database_manager.py  dependency_manager.py  error_handler.py  event_bus_manager.py  event_model.py  file_manager.py  logging_manager.py  monitoring_manager.py  plugin_error_handler.py  plugin_isolation_manager.py  plugin_manager.py  qt_safe_widget.py  remote_manager.py  resource_monitoring_manager.py  security_manager.py  service_locator.py  task_manager.py  thread_manager.py  thread_safe_core.py
resources/: resources.qrc
tests/: conftest.py  test_build.py
(+441 files in other folders)
