[tool.poetry]
name = "qorzen"
version = "0.1.0"
description = ""
authors = ["Ryan Serra <contact@TODO.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://TODO.com"
packages = [{ include = "qorzen" }]

[tool.poetry.dependencies]
python = "^3.12,<3.13"
pydantic = ">=2.4.2,<3.0.0"
pyside6 = ">=6.5.3,<7.0.0"
greenlet = "3.1.1"
sqlalchemy = "2.0.39"
asyncpg = ">=0.28.0,<0.29.0"
fastapi = ">=0.103.1,<0.104.0"
uvicorn = ">=0.23.2,<0.24.0"
pika = ">=1.3.2,<1.4.0"
python-json-logger = ">=2.0.7,<2.1.0"
psutil = ">=5.9.5,<6.0.0"
prometheus-client = ">=0.17.1,<0.18.0"
pyjwt = ">=2.8.0,<2.9.0"
passlib = { version = ">=1.7.4,<1.8.0", extras = ["bcrypt"] }
python-multipart = ">=0.0.6,<0.1.0"
tenacity = ">=8.2.3,<8.3.0"
structlog = ">=23.1.0,<24.0.0"
trio = ">=0.22.2,<0.23.0"
typing-extensions = ">=4.8.0,<4.13.0"
httpx = ">=0.24.1,<0.25.0"
pyyaml = ">=6.0.0,<6.1.0"

# Cloud provider SDKs
boto3 = ">=1.28.50,<1.29.0"
azure-storage-blob = ">=12.18.3,<12.19.0"
google-cloud-storage = ">=2.11.0,<2.12.0"

# Type stubs
types-python-dateutil = ">=2.8.19.14,<2.9.0"
types-pytz = ">=2023.3.1.1,<2024.0.0"
types-pyyaml = ">=6.0.12.12,<6.1.0"
types-requests = ">=2.31.0.2,<2.32.0"
psycopg2 = "^2.9.10"
aiosqlite = "^0.21.0"
jpype1 = "^1.5.2"
pandas = "^2.2.3"
qasync = "^0.27.1"
openpyxl = "^3.1.5"
semver = "^3.0.4"
scipy = "^1.15.3"
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.6"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
hypothesis = "^6.131.7"
line-profiler = "^4.2.0"
ipython = "^9.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
